# FastApi-MongoDB

./: .env  .gitignore  main.py  mongoURL.txt  pyproject.toml
app/config/: db_config.py
app/controllers/: auth_controller.py  job_controller.py  job_seeker_controller.py  user_controller.py
app/middleware/: auth_middleware.py
app/models/: job_model.py  job_seeker_model.py  user_model.py
app/routes/: admin_routes.py  auth_route.py  job_routes.py  job_seeker_routes.py  user_route.py  user_routes.py
app/services/: auth_service.py  job_seeker_service.py  job_service.py  user_service.py
app/utils/: jwt_util.py
app/validations/: admin_validations.py  auth_validations.py  job_validations.py  user_validations.py
