[project]
name = "tradala-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi>=0.115.12",
    "jwt>=1.3.1",
    "mong>=0.0.3",
    "motor>=3.7.0",
    "passlib>=1.7.4",
    "pydantic[email]>=2.11.2",
    "pyjwt>=2.10.1",
    "pymongo[srv]>=4.11.3",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.0",
]
